<?xml version="1.0" encoding="utf-8"?>


<!--
 /******************************************************************************
  * Copyright (c) 2014, AllSeen Alliance. All rights reserved.
  *
  *    Permission to use, copy, modify, and/or distribute this software for any
  *    purpose with or without fee is hereby granted, provided that the above
  *    copyright notice and this permission notice appear in all copies.
  *
  *    THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
  *    WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
  *    MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
  *    ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
  *    WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
  *    ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
  *    OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
  ******************************************************************************/
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <TextView
        android:id="@+id/connectorAppManifestRulesExpServicesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:text="@string/acl_mgmt_exp_services_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/connectorAppManifestRulesExpServicesRules"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp"
       android:layout_weight="1">
    </ListView>
    
    <TextView
        android:id="@+id/connectorAppManifestRulesExpServicesRulesNotFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:gravity="center"
        android:text="@string/connector_app_manifest_rules_exp_services_not_found"
        android:textSize="17sp"
        android:visibility="gone"
        android:layout_weight="1">
    </TextView>
    
    <TextView
        android:id="@+id/connectorAppManifestRulesRemServicesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"                
        android:text="@string/connector_app_manifest_rules_remoted_services"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/connectorAppManifestRulesRemServicesRules"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1">
    </ListView>
    
    <TextView
        android:id="@+id/connectorAppManifestRulesRemServicesRulesNotFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:gravity="center"
        android:text="@string/connector_app_manifest_rules_remoted_services_not_found"
        android:textSize="17sp"
        android:visibility="gone"
        android:layout_weight="1">
    </TextView>

</LinearLayout>
