<!--

  /******************************************************************************
  * Copyright (c) 2014, AllSeen Alliance. All rights reserved.
  *
  *    Permission to use, copy, modify, and/or distribute this software for any
  *    purpose with or without fee is hereby granted, provided that the above
  *    copyright notice and this permission notice appear in all copies.
  *
  *    THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
  *    WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
  *    MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
  *    ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
  *    WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
  *    ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
  *    OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
  ******************************************************************************/

-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConnectorApplicationActivity" >
    
     <TableLayout
        android:id="@+id/connectorAppDescData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp">
        
       <TableRow
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
            
		    <TextView
		        android:id="@+id/gwNameLbl"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:text="@string/gw_name_lbl"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <TextView
		        android:id="@+id/gwNameTv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:layout_marginLeft="2dp"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		</TableRow>

        <TableRow
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
       
		    <TextView
		        android:id="@+id/aclMgmtConnAppNameLbl"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/connector_appname_lbl"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <TextView
		        android:id="@+id/aclMgmtConnAppNameTv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="2dp"
		        android:layout_weight="1"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
		 
        <TableRow
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
		    
		     <TextView
		        android:id="@+id/connectorAppVerLbl"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/connector_appver_lbl"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		      <TextView
		        android:id="@+id/connectorAppVerTv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="2dp"
		        android:layout_weight="1"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		  </TableRow>
      
    </TableLayout>

    <!-- STATUS  -->
 
    <TextView
      android:id="@+id/connectorAppConnStatusLbl"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/connector_appstatus_connection_lbl" 
      android:layout_below="@+id/connectorAppDescData"
      android:layout_alignLeft="@+id/connectorAppDescData"
      android:layout_marginTop="16dp"/>
    
    <TextView
      android:id="@+id/connectorAppConnStatus"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="2dp"
      android:layout_toRightOf="@+id/connectorAppConnStatusLbl"
      android:layout_alignBaseline="@+id/connectorAppConnStatusLbl"/>
    
    <TextView
      android:id="@+id/connectorAppOperStatusLbl"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="6dp"
      android:layout_toRightOf="@+id/connectorAppConnStatus"
      android:layout_alignBaseline="@+id/connectorAppConnStatusLbl"
      android:text="@string/connector_appstatus_operation_lbl" />
    
    <TextView
      android:id="@+id/connectorAppOperStatus"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="2dp"
      android:layout_toRightOf="@+id/connectorAppOperStatusLbl"
      android:layout_alignBaseline="@+id/connectorAppConnStatusLbl" />
    
    <TextView
      android:id="@+id/connectorAppInstallStatusLbl"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/connectorAppConnStatusLbl"
      android:layout_alignLeft="@+id/connectorAppDescData"
      android:layout_marginTop="3dp"
      android:text="@string/connector_appstatus_install_lbl" />
    
    <TextView
      android:id="@+id/connectorAppInstallStatus"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toRightOf="@+id/connectorAppInstallStatusLbl"
      android:layout_alignBaseline="@+id/connectorAppInstallStatusLbl"
      android:layout_marginLeft="2dp" />
 
    <!-- END STATUS -->
     
    <ListView
        android:id="@+id/connectorAppAclsLv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/connectorAppInstallStatusLbl"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"> 
    </ListView>

    <TextView
        android:id="@+id/connectorAppAclsLvNoAcls"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:gravity="center"
        android:text="@string/connector_acls_not_found"
        android:textSize="17sp"
        android:visibility="gone">
    </TextView>

</RelativeLayout>
