<!--

  /******************************************************************************
  * Copyright (c) 2014, AllSeen Alliance. All rights reserved.
  *
  *    Permission to use, copy, modify, and/or distribute this software for any
  *    purpose with or without fee is hereby granted, provided that the above
  *    copyright notice and this permission notice appear in all copies.
  *
  *    THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
  *    WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
  *    MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
  *    ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
  *    WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
  *    ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
  *    OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
  ******************************************************************************/

  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConnectorAppsActivity" >

    <TextView
        android:id="@+id/gwNameLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/gw_name_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/gwNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/gwNameLbl"
        android:layout_toRightOf="@id/gwNameLbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/connectorAppsLv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/gwNameTv"
        android:layout_marginTop="30dp"> 
    </ListView>

    <TextView
        android:id="@+id/connectorAppsLvNoApps"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:gravity="center"
        android:text="@string/connector_apps_not_found"
        android:textSize="17sp"
        android:visibility="gone">
    </TextView>
    
    <Button
        android:id="@+id/connectorAppsDiscoverApps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connector_apps_discover_apps_btn" 
        android:layout_above="@+id/connectorAppsRefresh"
        android:layout_centerHorizontal="true"
        android:enabled="false"/>

    <Button
        android:id="@+id/connectorAppsRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connector_apps_refresh_btn"
        android:layout_centerHorizontal="true"   
        android:layout_alignParentBottom="true"  
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

</RelativeLayout>